# downcomforter

./: .gitignore  NOTICE  README.md  pydocmd.yml  pyproject.toml
downcomforter/: cmarkopt.py  down.py  highlight.py  index.html  matter.py  pattern.py  preview.py
tests/: test_downcomforter.py
